@@ -713,7 +713,7 @@ public class ArgHelper {
                 throw new NullPointerException("The short element passed in was null");
             }
 
-            return new Short(ReaderUtils.getElementText(elem));
+            return Short.valueOf(ReaderUtils.getElementText(elem));
         }
 
         public Object getInstance(String value) {
@@ -721,7 +721,7 @@ public class ArgHelper {
                 throw new NullPointerException("The short element passed in was null");
             }
 
-            return new Short(value);
+            return Short.valueOf(value);
         }
 
         /**
@@ -808,7 +808,7 @@ public class ArgHelper {
                 throw new NullPointerException("The integer passed in was null");
             }
 
-            return new Integer(ReaderUtils.getElementText(elem));
+            return Integer.valueOf(ReaderUtils.getElementText(elem));
         }
 
         public Object getInstance(String value) {
@@ -816,7 +816,7 @@ public class ArgHelper {
                 throw new NullPointerException("The integer passed in was null");
             }
 
-            return new Integer(value);
+            return Integer.valueOf(value);
         }
 
         /**
@@ -903,7 +903,7 @@ public class ArgHelper {
                 throw new NullPointerException("The long passed in was null");
             }
 
-            return new Long(ReaderUtils.getElementText(elem));
+            return Long.valueOf(ReaderUtils.getElementText(elem));
         }
 
         public Object getInstance(String value) {
@@ -911,7 +911,7 @@ public class ArgHelper {
                 throw new NullPointerException("The long passed in was null");
             }
 
-            return new Long(value);
+            return Long.valueOf(value);
         }
 
         /**
@@ -1404,7 +1404,7 @@ public class ArgHelper {
                 throw new NullPointerException("The boolean passed in was null");
             }
 
-            return new Boolean(ReaderUtils.getElementText(elem));
+            return Boolean.valueOf(ReaderUtils.getElementText(elem));
         }
 
         public Object getInstance(String elem) {
@@ -1412,7 +1412,7 @@ public class ArgHelper {
                 throw new NullPointerException("The boolean passed in was null");
             }
 
-            return new Boolean(elem);
+            return Boolean.valueOf(elem);
         }
 
         /**
@@ -1499,7 +1499,7 @@ public class ArgHelper {
                 throw new NullPointerException("The string passed in was null");
             }
 
-            return new String(ReaderUtils.getElementText(elem));
+            return ReaderUtils.getElementText(elem);
         }
 
         public Object getInstance(String value) {
@@ -1507,7 +1507,7 @@ public class ArgHelper {
                 throw new NullPointerException("The string passed in was null");
             }
 
-            return new String(value);
+            return value;
         }
 
         /**
