@@ -90,7 +90,7 @@ public class NullZeroValidationTest extends TestCase {
         return SimpleFeatureBuilder.build(
                 type,
                 new Object[] {
-                    new Integer(id), gf.createLineString(coords), name,
+                    Integer.valueOf(id), gf.createLineString(coords), name,
                 },
                 type.getTypeName() + "." + road);
     }
