@@ -34,10 +34,10 @@ public class XSLongStrategyTest extends TestSchema {
      * Test method for 'org.geotools.xml.strategies.xs.XSLongStrategy.parse(Element, Node[], Object)'
      */
     public void testParse() throws Exception {
-        validateValues("-1", new Long(-1));
-        validateValues("0", new Long(0));
-        validateValues("12678967543233", new Long(12678967543233L));
-        validateValues("+100000", new Long(100000));
+        validateValues("-1", Long.valueOf(-1));
+        validateValues("0", Long.valueOf(0));
+        validateValues("12678967543233", Long.valueOf(12678967543233L));
+        validateValues("+100000", Long.valueOf(100000));
     }
 
     protected QName getQName() {
