@@ -438,7 +438,7 @@ public final class TypeMap {
                 {
                     final byte candidate = (byte) value;
                     if (candidate == value) {
-                        return new Byte(candidate);
+                        return Byte.valueOf(candidate);
                     }
                     if (!allowWidening) break;
                     // Fall through
