@@ -121,22 +121,22 @@ public class NumericConverterFactory implements ConverterFactory {
                             || c == Short.class
                             || c == Byte.class) {
                         return (T) Long.valueOf(number.longValue());
-                        // return (T) new Long(source.toString());
+                        // return (T) Long.valueOf(source.toString());
                     }
                 } else if (Integer.class.equals(target)) {
                     if (c == Integer.class || c == Short.class || c == Byte.class) {
                         return (T) Integer.valueOf(number.intValue());
-                        // return (T) new Integer(source.toString());
+                        // return (T) Integer.valueOf(source.toString());
                     }
                 } else if (Short.class.equals(target)) {
                     if (c == Short.class || c == Byte.class) {
                         return (T) Short.valueOf(number.shortValue());
-                        // return (T) new Short(source.toString());
+                        // return (T) Short.valueOf(source.toString());
                     }
                 } else if (Byte.class.equals(target)) {
                     if (c == Byte.class) {
                         return (T) Byte.valueOf(number.byteValue());
-                        // return (T) new Byte(source.toString());
+                        // return (T) Byte.valueOf(source.toString());
                     }
                 }
             } else if (source instanceof String) {
@@ -156,16 +156,16 @@ public class NumericConverterFactory implements ConverterFactory {
                         BigInteger x = new BigInteger(src);
                         if (x.toString().equals(src)) return (T) x;
                     } else if (target == Long.class) {
-                        Long x = new Long(src);
+                        Long x = Long.valueOf(src);
                         if (x.toString().equals(src)) return (T) x;
                     } else if (target == Integer.class) {
-                        Integer x = new Integer(src);
+                        Integer x = Integer.valueOf(src);
                         if (x.toString().equals(src)) return (T) x;
                     } else if (target == Short.class) {
-                        Short x = new Short(src);
+                        Short x = Short.valueOf(src);
                         if (x.toString().equals(src)) return (T) x;
                     } else if (target == Byte.class) {
-                        Byte x = new Byte(src);
+                        Byte x = Byte.valueOf(src);
                         if (x.toString().equals(src)) return (T) x;
                     }
                 } catch (Exception ex) {
@@ -186,16 +186,16 @@ public class NumericConverterFactory implements ConverterFactory {
 
                 // integral
                 if (Long.class.equals(target)) {
-                    return new Long(s.longValue());
+                    return Long.valueOf(s.longValue());
                 }
                 if (Integer.class.equals(target)) {
-                    return new Integer(s.intValue());
+                    return Integer.valueOf(s.intValue());
                 }
                 if (Short.class.equals(target)) {
-                    return new Short(s.shortValue());
+                    return Short.valueOf(s.shortValue());
                 }
                 if (Byte.class.equals(target)) {
-                    return new Byte(s.byteValue());
+                    return Byte.valueOf(s.byteValue());
                 }
                 if (BigInteger.class.equals(target)) {
                     return BigInteger.valueOf(s.longValue());
@@ -217,7 +217,7 @@ public class NumericConverterFactory implements ConverterFactory {
 
                 if (Number.class.equals(target)) {
                     try {
-                        return new Integer(s.toString());
+                        return Integer.valueOf(s.toString());
                     } catch (Exception e) {
                     }
 
@@ -256,16 +256,16 @@ public class NumericConverterFactory implements ConverterFactory {
 
                 // textual
                 if (Long.class.equals(target)) {
-                    return new Long(integral);
+                    return Long.valueOf(integral);
                 }
                 if (Integer.class.equals(target)) {
-                    return new Integer(integral);
+                    return Integer.valueOf(integral);
                 }
                 if (Short.class.equals(target)) {
-                    return new Short(integral);
+                    return Short.valueOf(integral);
                 }
                 if (Byte.class.equals(target)) {
-                    return new Byte(integral);
+                    return Byte.valueOf(integral);
                 }
                 if (BigInteger.class.equals(target)) {
                     return new BigInteger(integral);
@@ -276,7 +276,7 @@ public class NumericConverterFactory implements ConverterFactory {
                     if (integral.equals(s)) {
                         // we think this is an integer of some sort
                         try {
-                            return new Integer(integral);
+                            return Integer.valueOf(integral);
                         } catch (Exception e) {
                         }
 
