@@ -45,6 +45,6 @@ public class FilterFunction_int2bbool extends FunctionExpressionImpl {
                     "Filter Function problem for function int2bbool argument #0 - expected type int");
         }
 
-        return new Boolean(StaticGeometry.int2bbool(arg0));
+        return Boolean.valueOf(StaticGeometry.int2bbool(arg0));
     }
 }
