@@ -45,6 +45,6 @@ public class FilterFunction_not extends FunctionExpressionImpl {
                     "Filter Function problem for function not argument #0 - expected type boolean");
         }
 
-        return new Boolean(StaticGeometry.not(arg0));
+        return Boolean.valueOf(StaticGeometry.not(arg0));
     }
 }
