@@ -58,6 +58,6 @@ public class FilterFunction_notEqualTo extends FunctionExpressionImpl {
                     "Filter Function problem for function notEqualTo argument #1 - expected type Object");
         }
 
-        return new Boolean(StaticGeometry.notEqualTo(arg0, arg1));
+        return Boolean.valueOf(StaticGeometry.notEqualTo(arg0, arg1));
     }
 }
