@@ -59,6 +59,6 @@ public class FilterFunction_touches extends FunctionExpressionImpl {
                     "Filter Function problem for function touches argument #1 - expected type Geometry");
         }
 
-        return new Boolean(StaticGeometry.touches(arg0, arg1));
+        return Boolean.valueOf(StaticGeometry.touches(arg0, arg1));
     }
 }
