@@ -47,7 +47,7 @@ public class SimpleFeatureBuilderTest extends TestCase {
     public void testSanity() throws Exception {
         GeometryFactory gf = new GeometryFactory();
         builder.add(gf.createPoint(new Coordinate(0, 0)));
-        builder.add(new Integer(1));
+        builder.add(Integer.valueOf(1));
         builder.add(new Float(2.0));
 
         SimpleFeature feature = builder.buildFeature("fid");
@@ -56,14 +56,14 @@ public class SimpleFeatureBuilderTest extends TestCase {
         assertEquals(3, feature.getAttributeCount());
 
         assertTrue(gf.createPoint(new Coordinate(0, 0)).equals(feature.getAttribute("point")));
-        assertEquals(new Integer(1), feature.getAttribute("integer"));
+        assertEquals(Integer.valueOf(1), feature.getAttribute("integer"));
         assertEquals(new Float(2.0), feature.getAttribute("float"));
     }
 
     public void testTooFewAttributes() throws Exception {
         GeometryFactory gf = new GeometryFactory();
         builder.add(gf.createPoint(new Coordinate(0, 0)));
-        builder.add(new Integer(1));
+        builder.add(Integer.valueOf(1));
 
         SimpleFeature feature = builder.buildFeature("fid");
         assertNotNull(feature);
@@ -71,14 +71,14 @@ public class SimpleFeatureBuilderTest extends TestCase {
         assertEquals(3, feature.getAttributeCount());
 
         assertTrue(gf.createPoint(new Coordinate(0, 0)).equals(feature.getAttribute("point")));
-        assertEquals(new Integer(1), feature.getAttribute("integer"));
+        assertEquals(Integer.valueOf(1), feature.getAttribute("integer"));
         assertNull(feature.getAttribute("float"));
     }
 
     public void testSetSequential() throws Exception {
         GeometryFactory gf = new GeometryFactory();
         builder.set("point", gf.createPoint(new Coordinate(0, 0)));
-        builder.set("integer", new Integer(1));
+        builder.set("integer", Integer.valueOf(1));
         builder.set("float", new Float(2.0));
 
         SimpleFeature feature = builder.buildFeature("fid");
@@ -87,7 +87,7 @@ public class SimpleFeatureBuilderTest extends TestCase {
         assertEquals(3, feature.getAttributeCount());
 
         assertTrue(gf.createPoint(new Coordinate(0, 0)).equals(feature.getAttribute(0)));
-        assertEquals(new Integer(1), feature.getAttribute(1));
+        assertEquals(Integer.valueOf(1), feature.getAttribute(1));
         assertEquals(new Float(2.0), feature.getAttribute(2));
     }
 
@@ -95,7 +95,7 @@ public class SimpleFeatureBuilderTest extends TestCase {
         GeometryFactory gf = new GeometryFactory();
         builder.set("float", new Float(2.0));
         builder.set("point", gf.createPoint(new Coordinate(0, 0)));
-        builder.set("integer", new Integer(1));
+        builder.set("integer", Integer.valueOf(1));
 
         SimpleFeature feature = builder.buildFeature("fid");
         assertNotNull(feature);
@@ -103,19 +103,19 @@ public class SimpleFeatureBuilderTest extends TestCase {
         assertEquals(3, feature.getAttributeCount());
 
         assertTrue(gf.createPoint(new Coordinate(0, 0)).equals(feature.getAttribute(0)));
-        assertEquals(new Integer(1), feature.getAttribute(1));
+        assertEquals(Integer.valueOf(1), feature.getAttribute(1));
         assertEquals(new Float(2.0), feature.getAttribute(2));
     }
 
     public void testSetTooFew() throws Exception {
-        builder.set("integer", new Integer(1));
+        builder.set("integer", Integer.valueOf(1));
         SimpleFeature feature = builder.buildFeature("fid");
         assertNotNull(feature);
 
         assertEquals(3, feature.getAttributeCount());
 
         assertNull(feature.getAttribute(0));
-        assertEquals(new Integer(1), feature.getAttribute(1));
+        assertEquals(Integer.valueOf(1), feature.getAttribute(1));
         assertNull(feature.getAttribute(2));
     }
 
@@ -179,7 +179,7 @@ public class SimpleFeatureBuilderTest extends TestCase {
     public void testUserData() throws Exception {
         GeometryFactory gf = new GeometryFactory();
         builder.add(gf.createPoint(new Coordinate(0, 0)));
-        builder.add(new Integer(1));
+        builder.add(Integer.valueOf(1));
         builder.add(new Float(2.0));
         builder.featureUserData("foo", "bar");
 
