@@ -63,8 +63,8 @@ public abstract class FunctionTestSupport extends TestCase {
                     SimpleFeatureBuilder.build(
                             dataType,
                             new Object[] {
-                                new Integer(i + 1),
-                                new Integer(iVal[i]),
+                                Integer.valueOf(i + 1),
+                                Integer.valueOf(iVal[i]),
                                 new Double(dVal[i]),
                                 fac.createPoint(new Coordinate(iVal[i], iVal[i])),
                                 "Group" + (i % 4)
@@ -90,7 +90,7 @@ public abstract class FunctionTestSupport extends TestCase {
             features.add(
                     SimpleFeatureBuilder.build(
                             jenksType,
-                            new Object[] {new Integer(i + 1), new Double(jenks71[i])},
+                            new Object[] {Integer.valueOf(i + 1), new Double(jenks71[i])},
                             "jenks" + i));
         }
         jenksCollection = features;
@@ -102,7 +102,7 @@ public abstract class FunctionTestSupport extends TestCase {
             constantCollection.add(
                     SimpleFeatureBuilder.build(
                             constantType,
-                            new Object[] {new Integer(i + 1), new Double(123.123), "abc"},
+                            new Object[] {Integer.valueOf(i + 1), new Double(123.123), "abc"},
                             "constant" + i));
         }
         this.constantCollection = constantCollection;
