@@ -127,7 +127,7 @@ public class JenksFunctionTest extends FunctionTestSupport {
             myfeatures[i] =
                     SimpleFeatureBuilder.build(
                             dataType,
-                            new Object[] {new Integer(i + 1), new Integer(iVal[i])},
+                            new Object[] {Integer.valueOf(i + 1), Integer.valueOf(iVal[i])},
                             "classification.test1" + (i + 1));
         }
         SimpleFeatureSource source = DataUtilities.source(myfeatures);
@@ -167,7 +167,7 @@ public class JenksFunctionTest extends FunctionTestSupport {
             myfeatures[i] =
                     SimpleFeatureBuilder.build(
                             dataType,
-                            new Object[] {new Integer(i + 1), new Integer(iVal[i])},
+                            new Object[] {Integer.valueOf(i + 1), Integer.valueOf(iVal[i])},
                             "classification.t" + (i + 1));
         }
         SimpleFeatureSource source = DataUtilities.source(myfeatures);
@@ -187,12 +187,12 @@ public class JenksFunctionTest extends FunctionTestSupport {
                 DataUtilities.createType("classification.nullnan", "id:0,foo:int,bar:double");
         Integer iVal[] =
                 new Integer[] {
-                    new Integer(0),
-                    new Integer(0),
-                    new Integer(0),
-                    new Integer(13),
-                    new Integer(13),
-                    new Integer(13),
+                    Integer.valueOf(0),
+                    Integer.valueOf(0),
+                    Integer.valueOf(0),
+                    Integer.valueOf(13),
+                    Integer.valueOf(13),
+                    Integer.valueOf(13),
                     null,
                     null,
                     null
@@ -217,7 +217,7 @@ public class JenksFunctionTest extends FunctionTestSupport {
                     SimpleFeatureBuilder.build(
                             ft,
                             new Object[] {
-                                new Integer(i + 1), iVal[i], dVal[i],
+                                Integer.valueOf(i + 1), iVal[i], dVal[i],
                             },
                             "nantest.t" + (i + 1));
         }
